# vibe-coding-remote

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  biome.json  build.rs  justfile  mise.local.toml.example  package.json  pnpm-lock.yaml
.github/workflows/: deploy-pages.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/enximi/voicebridge/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/enximi/voicebridge/: MainActivity.kt
android/app/src/main/java/com/enximi/voicebridge/data/: HistoryItem.kt  PreferencesManager.kt
android/app/src/main/java/com/enximi/voicebridge/network/: VoiceBridgeApi.kt
android/app/src/main/java/com/enximi/voicebridge/ui/: Composer.kt  Dock.kt  KeyboardAwareEditText.kt  MainViewModel.kt  SettingsSheet.kt  ViewModelFactory.kt
android/app/src/main/java/com/enximi/voicebridge/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/enximi/voicebridge/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
apps/tauri/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/tauri/scripts/: enter-android-env.ps1
apps/tauri/src/: main.tsx
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/tauri/src/platform/: bridge.ts
apps/web/: index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/platform/: bridge.ts
crates/desktop-server/: Cargo.toml
crates/desktop-server/src/: input.rs  main.rs  server.rs
crates/server/: ARCHITECTURE.md  Cargo.toml  DESIGN.md  build.rs  设计.md
crates/server/src/: action.rs  cli.rs  export.rs  import_config.rs  input.rs  lib.rs  main.rs  network.rs  protocol.rs  qr.rs  runtime.rs  server.rs  web_assets.rs
crates/server/src/export/: typescript.rs
crates/server/src/input/: clipboard.rs  executor.rs  keyboard.rs  keymap.rs  windows.rs
crates/server/src/server/: auth.rs  error.rs  handlers.rs  router.rs  startup.rs
doc/: README.md  architecture.md  frontend-features.md  release-checklist.md
doc/product/: README.md  acceptance-criteria.md  feature-list.md  implementation-plan.md  prd.md  technical-design.md  ux-spec.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Composer.tsx  Dock.tsx  SettingsModal.tsx  icons.tsx
frontend/src/hooks/: useContinuousTrigger.ts  usePreferences.ts  useViewportOffset.ts
frontend/src/utils/: api.ts  composerDraft.ts  haptics.ts
src/: cli.rs  input.rs  lib.rs  main.rs  network.rs  server.rs  web_assets.rs
src/mobile-web/: app.js  index.html  manifest.webmanifest  styles.css
