[workspace]
members = [
  "apps/tauri/src-tauri",
  "crates/server"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
arboard = "3"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive"] }
config = "0.15"
local-ip-address = "0.6"
qrcode = "0.14"
serde = { version = "1", features = ["derive"] }
specta = { version = "2.0.0-rc.24", features = ["derive"] }
specta-serde = "0.0.11"
specta-typescript = "0.0.11"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
windows = { version = "0.62", features = ["Win32_UI_Input_KeyboardAndMouse"] }
