[package]
name = "voice-bridge-server"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Desktop API server and input bridge for Voice Bridge."

[lib]
name = "voice_bridge_server"

[[bin]]
name = "voice-bridge"
path = "src/main.rs"

[dependencies]
arboard.workspace = true
axum.workspace = true
clap.workspace = true
config.workspace = true
local-ip-address.workspace = true
qrcode.workspace = true
serde.workspace = true
specta.workspace = true
specta-serde.workspace = true
specta-typescript.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
