[package]
name = "vibe-coding-remote-server"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Desktop API server and input bridge for Vibe Coding Remote."

[lib]
name = "vibe_coding_remote_server"

[[bin]]
name = "vibe-coding-remote"
path = "src/main.rs"

[dependencies]
arboard.workspace = true
axum.workspace = true
clap.workspace = true
config.workspace = true
keyboard-types.workspace = true
local-ip-address.workspace = true
qrcode.workspace = true
serde.workspace = true
specta.workspace = true
# Enables serde metadata lowering for `#[derive(Type)]` on this Specta release line.
specta-macros.workspace = true
specta-serde.workspace = true
specta-typescript.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
