[package]
name = "voice-bridge-tauri"
version = "0.1.1"
description = "Tauri application shell for Voice Bridge."
authors = ["enximi"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "voice_bridge_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-opener.workspace = true

